# casino-rollup

./: .gitignore  Anchor.toml  CRITICAL_TESTNET_REALITY_CHECK.md  Cargo.toml  PHASE3F_COMPLETION_REPORT.md  PHASE_3D_COMPLETION.md  README.md  TESTING.md  TESTING_REPORT.md  debug-bet-hang.sh  manual-test.sh  package-lock.json  package.json  progress.json  requirements.txt  solanacasino.json  test-all.sh  test-fixed-solana-integration.sh  test-phase0.sh  test-real-solana-complete.sh  test-simple-solana.sh  test-transaction-storage.sh  test-vrf-solana-complete.sh  test-vrf-validation.sh  test-vrf-working.sh  test-wallet.json  tsconfig.json  verify-solana-transactions.sh  vrf-keypair.json  zkcasino.settlement.json  zkinfo.txt
.github/workflows/: ci.yml
docs/: batch_processing_strategy.md  integration-testing-report.md  phase3_design_decisions_overview.md  phase3a_zkvm_decision_report.md  phase3c_completion_report.md  phase3e_settlement_integration_report.md  phase3f_completion_report.md  phase4_vrf_implementation_plan.md  phase4a_vrf_keypair_completion.md  solana-transaction-error-analysis.md  transaction_signature_bug_resolution.md  vrf-solana-integration-findings.md
explorer/: index.html  package-lock.json  package.json  test-wallet.json  vite.config.js  vite.config.ts
explorer/src/: App.test.tsx  App.tsx  main.tsx  performance.css
explorer/src/components/: PerformanceChart.tsx  PerformanceDashboard.tsx  SettlementQueueMonitor.tsx  TestResults.tsx
explorer/src/hooks/: usePerformanceTest.ts
explorer/src/test/: basic.test.ts  integration.test.ts
explorer/src/types/: performance.ts
explorer/src/utils/: apiClient.ts
programs/vault/: Cargo.toml
programs/vault/src/: lib.rs
programs/verifier/: Cargo.toml
programs/verifier/src/: groth16.rs  lib.rs  verifying_key.rs
prover/: Cargo.toml
prover/examples/: export_vk.rs
prover/src/: legacy.rs  lib.rs  proof_generator.rs  witness_generator.rs
prover/src/circuits/: accounting.rs  mod.rs  multiplication.rs
prover/tests/: debug_phase3c.rs  integration_phase3c.rs
sequencer/: Cargo.toml  performance_test.sh  test_message_determinism.rs
sequencer/src/: database.rs  main.rs  oracle.rs  settlement_persistence.rs  settlement_prover.rs  solana.rs
sequencer/src/vrf/: keypair.rs  mod.rs
tests/: test-all.sh  zkcasino.js  zkcasino.ts
tests/integration/: comprehensive-integration-test.sh
tests/phase1/: test-bet-endpoint.sh
tests/phase2/: test-solana-complete.sh  test-solana-integration.sh  test-solana-quick.sh  test-status.sh
tests/phase3/: test-3f-end-to-end-validation.sh  test-3f-quick-validation.sh  test-phase3c.sh  test-real-solana-integration.sh
tests/phase3e/: comprehensive-persistence-test.sh  enhanced-persistence-test.sh  quick-persistence-test.sh  simple-persistence-test.sh  test-persistence-focused.sh  test-phase3e-requirements.sh
tests/phase4/: test-4a-vrf-keypair.sh  test-4b-vrf-message-generation.sh  test-4c-vrf-sequencer-integration.sh  test-4d-vrf-solana-integration.sh
