[package]
name = "sequencer"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework
axum.workspace = true
tokio.workspace = true
tower = { workspace = true, features = ["util"] }
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-test.workspace = true
assert_matches.workspace = true