[package]
name = "sequencer"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { workspace = true, features = ["util"] }
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Random number generation
rand = "0.8"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid.workspace = true

# Utilities
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tokio-test.workspace = true
assert_matches.workspace = true