[package]
name = "sequencer"
version.workspace = true
edition.workspace = true

[dependencies]
# Web framework
axum.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["cors"] }

# HTTP client for oracle integration
reqwest = { version = "0.11", features = ["json"] }

# Solana dependencies
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Random number generation
rand = "0.8"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid.workspace = true

# High-performance data structures
dashmap.workspace = true
parking_lot.workspace = true
num_cpus.workspace = true

# Utilities
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
log = "0.4"

[dev-dependencies]
tokio-test.workspace = true
assert_matches.workspace = true